less cache for css&js, fix #switch-price not hidden on wide screen

--- a/static/css/product_page.css
+++ b/static/css/product_page.css
@@ -167,6 +167,9 @@ td.unit-price > span.price {
         display: none;
     }
 }
+div#switch-price {
+    display: none;
+}
 
 /* "Količina" na sirokim rezolucijama, "Kol." na uskim */
 /*.th-quantity::after { content: 'Kol.' }
