new archiving mechanism, add bakmaz pricelists

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,14 +31,14 @@
     </ul>
 
     <p>
-        <b>Trenutno dostupne trgovine</b>: Boso, Eurospin, Kaufland, Konzum, KTC, Lidl, Metro, NTL, Plodine, Ribola*, Spar, Studenac,
+        <b>Trenutno dostupne trgovine</b>: Bakmaz, Boso, Eurospin, Kaufland, Konzum, KTC, Lidl, Metro, NTL, Plodine, Ribola*, Spar, Studenac,
         Tommy, Trgovina Krk
         <br>
         Trenutno nedostaju neke poslovnice Ribole, valjda imaju neku zaštitu kada zahtjeve šalje server
     </p>
     <p>
-        <b>Uskoro</b>: Djelo, Jadranka, Djelo Vodice, Bure, Trgocentar, Lorenco, Vrutak, Bakmaz, Diskont Stanić, Rotodinamic,
-        Brodokomerc, DM
+        <b>Uskoro</b>: Djelo, Jadranka, Djelo Vodice, Bure, Trgocentar, Lorenco, Vrutak, Diskont Stanić, Rotodinamic,
+        Brodokomerc, DM, Travelfree
     </p>
     <p>Ako znate za još neku trgovinu koja je objavila cjenike, a nije gore navedena, javite!</p>
 
