various fixes, prevent unnecessary wayback machine archivals

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,12 +32,12 @@
 
     <p>
         <b>Trenutno dostupne trgovine</b>: Bakmaz, Boso, Eurospin, Kaufland, Konzum, KTC, Lidl, Metro, NTL, Plodine, Ribola*, Spar, Studenac,
-        Tommy, Trgovina Krk
+        Tommy, Trgovina Krk, Vrutak
         <br>
         Trenutno nedostaju neke poslovnice Ribole, valjda imaju neku zaštitu kada zahtjeve šalje server
     </p>
     <p>
-        <b>Uskoro</b>: Djelo, Jadranka, Djelo Vodice, Bure, Trgocentar, Lorenco, Vrutak, Diskont Stanić, Rotodinamic,
+        <b>Uskoro</b>: Djelo, Jadranka, Djelo Vodice, Bure, Trgocentar, Lorenco, Diskont Stanić, Rotodinamic,
         Brodokomerc, DM, Travelfree
     </p>
     <p>Ako znate za još neku trgovinu koja je objavila cjenike, a nije gore navedena, javite!</p>
