--- a/templates/index.html
+++ b/templates/index.html
@@ -31,13 +31,13 @@
     </ul>
 
     <p>
-        <b>Trenutno dostupne trgovine</b>: Bakmaz, Boso, Bure, Eurospin, Kaufland, Konzum, KTC, Lidl, Metro, NTL, Plodine, Ribola*, Spar, Studenac,
+        <b>Trenutno dostupne trgovine</b>: Bakmaz, Boso, Bure, Eurospin, Jadranka, Kaufland, Konzum, KTC, Lidl, Metro, NTL, Plodine, Ribola*, Spar, Studenac,
         Tommy, Trgovina Krk, Vrutak
         <br>
 {#        Trenutno nedostaju neke poslovnice Ribole, valjda imaju neku zaštitu kada zahtjeve šalje server#}
     </p>
     <p>
-        <b>Uskoro</b>: Djelo, Jadranka, Djelo Vodice, Trgocentar, Lorenco, Diskont Stanić, Rotodinamic,
+        <b>Uskoro</b>: Djelo, Djelo Vodice, Trgocentar, Lorenco, Diskont Stanić, Rotodinamic,
         Brodokomerc, DM, Travelfree
     </p>
     <p>Ako znate za još neku trgovinu koja je objavila cjenike, a nije gore navedena, javite!</p>
