add roto dinamic

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
     </p>
     <p>
         <b>Uskoro</b>: Djelo, Djelo Vodice, Diskont Stanić, Rotodinamic,
-        Brodokomerc, DM, Travelfree
+        Brodokomerc, DM, Travelfree, Radenska Adriatic, Jedinstvo Labin, Tobylex, Croma Varaždin
     </p>
     <p>Ako znate za još neku trgovinu koja je objavila cjenike, a nije gore navedena, javite!</p>
 
