--- a/templates/product_page.html
+++ b/templates/product_page.html
@@ -7,8 +7,8 @@
 {% block content %}
     <h1>{{ product.name }}</h1>
 
-    <p class="only-wide">Postavljanjem miša preko naziva trgovine prikazat će se popis pojedinih prodavaonica.</p>
-    <p class="only-narrow">Postavljanjem miša preko ili pritiskom na ikonu trgovine prikazat će se njen naziv, kao i popis pojedinih prodavaonica.</p>
+{#    <p class="only-wide">Postavljanjem miša preko naziva trgovine prikazat će se popis pojedinih prodavaonica.</p>#}
+{#    <p class="only-narrow">Postavljanjem miša preko ili pritiskom na ikonu trgovine prikazat će se njen naziv, kao i popis pojedinih prodavaonica.</p>#}
     {# labels for specific products #}
     {% if product.has_labels %}
     <div class="labels">
