--- a/templates/index.html
+++ b/templates/index.html
@@ -31,13 +31,14 @@
     </ul>
 
     <p>
-        <b>Trenutno dostupne trgovine</b>: Bakmaz, Boso, Brodokomerc, Bure, Eurospin, Jadranka, Kaufland, Konzum, KTC, Lidl, Lorenco,
-        Metro, NTL, Plodine, Ribola, Roto dinamic, Spar, Studenac, Tommy, Trgocentar, Trgovina Krk, Vrutak
+        <b>Trenutno dostupne trgovine</b>: Bakmaz, Boso, Brodokomerc, Bure, Eurospin, Jadranka, Kaufland, Konzum, KTC,
+        Lidl, Lorenco, Metro, NTL, Plodine, Radenska Adriatic, Ribola, Roto dinamic, Spar, Studenac, Tommy, Trgocentar,
+        Trgovina Krk, Vrutak
         <br>
 {#        Trenutno nedostaju neke poslovnice Ribole, valjda imaju neku zaštitu kada zahtjeve šalje server#}
     </p>
     <p>
-        <b>Uskoro</b>: Djelo, Djelo Vodice, Diskont Stanić, DM, Travelfree, Radenska Adriatic,
+        <b>Uskoro</b>: Djelo, Djelo Vodice, Diskont Stanić, DM, Travelfree,
         Jedinstvo Labin, Tobylex, Croma Varaždin
     </p>
     <p>Ako znate za još neku trgovinu koja je objavila cjenike, a nije gore navedena, javite!</p>
