--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -27,4 +27,24 @@ div#content footer span.nav-footer a {
     margin-left: 80px;
     color: lightgray;
     font-size: 0.9em;
+    text-decoration: none;
+}
+
+div#content footer span.nav-footer a[href] {
+    position: relative;
+}
+
+div#content footer span.nav-footer a[href]::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: 4px;
+    width: 0;
+    height: 1px;
+    background-color: lightgray;
+    transition: width 0.1s ease-out, left 0.1s ease-out;
+}
+div#content footer span.nav-footer a[href]:hover::after {
+    width: 100%;
+    left: 0;
 }
