--- a/templates/index.html
+++ b/templates/index.html
@@ -31,14 +31,13 @@
     </ul>
 
     <p>
-        <b>Trenutno dostupne trgovine</b>: Bakmaz, Boso, Brodokomerc, Bure, Eurospin, Jadranka, Jedinstvo Labin,
-        Kaufland, Konzum, KTC, Lidl, Lorenco, Metro, NTL, Plodine, Radenska Adriatic, Ribola, Roto dinamic, Spar,
-        Studenac, Tommy, Trgocentar, Trgovina Krk, Vrutak
+        <b>Trenutno dostupne trgovine</b>: Bakmaz, Boso, Brodokomerc, Bure, Croma-Varaždin, Eurospin, Jadranka,
+        Jedinstvo Labin, Kaufland, Konzum, KTC, Lidl, Lorenco, Metro, NTL, Plodine, Radenska Adriatic, Ribola,
+        Roto dinamic, Spar, Studenac, Tommy, Trgocentar, Trgovina Krk, Vrutak
         <br>
     </p>
     <p>
-        <b>Uskoro</b>: Djelo, Djelo Vodice, Diskont Stanić, DM, Travelfree,
-        Tobylex, Croma Varaždin
+        <b>Uskoro</b>: Djelo, Djelo Vodice, Diskont Stanić, DM, Travelfree, Tobylex
     </p>
     <p>Ako znate za još neku trgovinu koja je objavila cjenike, a nije gore navedena, javite!</p>
 
