add travelfree confirm

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,11 +33,11 @@
     <p>
         <b>Trenutno dostupne trgovine</b>: Bakmaz, Boso, Brodokomerc, Bure, Croma-Varaždin, Eurospin, Jadranka,
         Jedinstvo Labin, Kaufland, Konzum, KTC, Lidl, Lorenco, Metro, NTL, Plodine, Radenska Adriatic, Ribola,
-        Roto dinamic, Spar, Studenac, Tommy, Trgocentar, Trgovina Krk, Vrutak
+        Roto dinamic, Spar, Studenac, Tommy, Travel FREE, Trgocentar, Trgovina Krk, Vrutak
         <br>
     </p>
     <p>
-        <b>Uskoro</b>: Djelo, Djelo Vodice, Diskont Stanić, DM, Travelfree, Tobylex
+        <b>Uskoro</b>: Djelo, Djelo Vodice, Diskont Stanić, DM, Tobylex
     </p>
     <p>Ako znate za još neku trgovinu koja je objavila cjenike, a nije gore navedena, javite!</p>
 
