--- a/static/css/banner.css
+++ b/static/css/banner.css
@@ -2,7 +2,7 @@
     /* width: 100% 100vw ; */
     z-index: 2025;
     text-align: center;
-    padding: 4px 6px 5px 6px;
+    padding: 6px/* 4px 6px 5px 6px */;
     font-size: 1.3rem;
 }
 
