--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,4 @@
-<div id="header">
+<header>
     <a href="/" class="homepage">cijene.org</a>
     <span class="nav" style="float: right">
 {#            <a href="">Link1</a>#}
@@ -6,4 +6,4 @@
 {#      <a href="{{ url_for('read_page', page='blog') }}">blog</a>#}
       <a href="{{ url_for('read_page', page='contact') }}">kontakt</a>
     </span>
-</div>
+</header>
