--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,9 @@
 <header>
     <a href="/" class="homepage">cijene.org</a>
-    <span class="nav" style="float: right">
+    <nav>
 {#            <a href="">Link1</a>#}
 {#			<a href="">dugacki link 2</a>#}
 {#      <a href="{{ url_for('read_page', page='blog') }}">blog</a>#}
       <a href="{{ url_for('read_page', page='contact') }}">kontakt</a>
-    </span>
+    </nav>
 </header>
