--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <span>&copy; 2025 cijene.org</span>  {# add &emsp; #}
-    <span class="nav-footer">
+    <nav>
         <a class="hello">@</a>
         <a href="https://github.com/IamMusavaRibica/cijene.org" target="_blank">Open Source</a>
-    </span>
+    </nav>
 </footer>
