--- a/templates/product_page.html
+++ b/templates/product_page.html
@@ -1,7 +1,19 @@
 {% extends '_base.html' %}
 {% block extra_head %}
-    <link rel="stylesheet" href="/static/css/product_page.css">
-    <script src="/static/js/product_page.js" defer></script>
+    <link rel="stylesheet" href="/static/css/product-page.css">
+    <script src="/static/js/product-page.js" defer></script>
+
+
+
+<style>
+  #offers tr.data-row { cursor: pointer; }
+  #offers tr.details-row > td { padding: 0; border: 0; }
+  .details { height: 0; overflow: hidden; transition: height .24s ease; will-change: height; contain: layout; }
+  .details > .inner { padding: 12px 16px; background: #f7fafc; border-top: 1px solid #e2e8f0; }
+</style>
+
+
+
 {% endblock %}
 
 {% block content %}
@@ -85,3 +97,4 @@
         {% endfor %}
     </table>
 {% endblock %}
+
