--- a/static/css/product-page.css
+++ b/static/css/product-page.css
@@ -1,4 +1,4 @@
-table#offers {
+#offers {
     margin-top: 20px;
     margin-bottom: 25px;
     width: 100%;
@@ -6,6 +6,39 @@ table#offers {
     line-height: 140%;
     table-layout: auto;
 }
+
+
+#offers tr.data-row { cursor: pointer; }
+#offers tr.details-row > td { padding: 0; border: 0; }
+.details { height: 0; overflow: hidden; transition: height .24s ease; will-change: height; /*contain: layout;*/ box-shadow: none; }
+.details > .inner {
+    padding: 12px 16px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+@media (min-width: 801px) {
+    .details > .inner { padding-right: 60px; }
+}
+.details > .inner > .link {
+    margin: 0 0 0 auto;
+    justify-content: right;
+
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.details > .inner > .link > a {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 1.3rem;
+    box-sizing: border-box;
+}
+.details > .inner h3 { margin-top: 0; margin-bottom: 5px; }
+.details > .inner p { margin-top: 0; }
+
+.details.has-divider { box-shadow: inset 0 1px 0 transparent; }  /* no layout shift */
+
 
 /*td:first-child { width: 50%; }*/
 td.quantity { width: 8%; }
