--- a/static/css/product-page.css
+++ b/static/css/product-page.css
@@ -38,6 +38,8 @@
 .details > .inner p { margin-top: 0; }
 
 .details.has-divider { box-shadow: inset 0 1px 0 transparent; }  /* no layout shift */
+.data-row[hidden] + .details-row,
+.data-row.is-hidden + .details-row { display: none !important; }
 
 
 /*td:first-child { width: 50%; }*/
@@ -99,7 +101,10 @@ tr > td {
 td.name {  /* nazivi trgovina */
     padding-left: 11px;  /* nema paddinga na width<550px */
 }
-tr:not(:first-child) {
+tr.data-row:not(:first-child) {
+    border-top: #434343 solid 1px;
+}
+tr.data-row.opening-started:not(:first-child) {
     border-bottom: #434343 solid 1px;
 }
 tr:not(:first-child):hover { /* svi osim headera */
