add page with price list sources

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,8 @@
 <footer>
     <span>&copy; 2025 cijene.org</span>  {# add &emsp; #}
     <nav>
-        <a class="hello">@</a>
+{#        <a class="hello">@</a>#}
+        <a href="/sources">Izvori podataka</a>
         <a href="https://github.com/IamMusavaRibica/cijene.org" target="_blank">Open Source</a>
     </nav>
 </footer>
