--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
     <p>
         <b>Trenutno dostupne trgovine</b>: Bakmaz, Boso, Brodokomerc, Bure, Croma-Varaždin, Eurospin, Jadranka,
         Jedinstvo Labin, Kaufland, Konzum, KTC, Lidl, Lorenco, Metro, NTL, Plodine, Radenska Adriatic, Ribola,
-        Roto dinamic, Spar, Studenac, Tobylex, Tommy, Travel FREE, Trgocentar, Trgovina Krk, Vrutak
+        Roto dinamic, Spar, Stridon, Studenac, Tobylex, Tommy, Travel FREE, Trgocentar, Trgovina Krk, Vrutak
         <br>
     </p>
     <p>
