remove development banner

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -23,9 +23,9 @@
 <body>
 <div>
     {% block top %}
-        <div class="banner demo-page-warning">
+        <!--div class="banner demo-page-warning">
             <span>STRANICA U RAZVOJU</span>
-        </div>
+        </div--->
         <noscript class="banner">
             Onemogućili ste JavaScript u pregledniku. Funkcionalnost stranice je ograničena!
         </noscript>
