add stridon to sources.html

--- a/templates/sources.html
+++ b/templates/sources.html
@@ -27,6 +27,7 @@
         <li><a href="https://ribola.hr/ribola-cjenici/" target="_blank">Ribola</a></li>
         <li><a href="https://www.rotodinamic.hr/cjenici/" target="_blank">Roto dinamic</a></li>
         <li><a href="https://www.spar.hr/datoteke_cjenici/index.html" target="_blank">Spar</a></li>
+        <li><a href="https://stridon.hr/hr/supermarketi" target="_blank">Stridon</a></li>
         <li><a href="https://www.studenac.hr/popis-maloprodajnih-cijena" target="_blank">Studenac Market</a></li>
         <li><a href="https://tobylex.net/cjenik/" target="_blank">Tobylex</a></li>
         <li><a href="https://www.tommy.hr/objava-cjenika" target="_blank">Tommy</a></li>
