--- a/templates/_base.html
+++ b/templates/_base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Pregled cijena svih proizvoda u trgovinama u Hrvatskoj.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&family=Gaegu&family=Gamja+Flower&family=Lacquer&family=Mansalva&family=Marck+Script&family=Merienda:wght@300..900&family=Mogra&family=Mynerve&family=Nanum+Pen+Script&family=Oregano:ital@0;1&family=Playpen+Sans:wght@100..800&family=Protest+Revolution&family=Rock+Salt&display=swap" rel="stylesheet">
@@ -12,13 +13,14 @@
     <link rel="stylesheet" href="/static/css/header.css">
     <link rel="stylesheet" href="/static/css/footer.css">
     <link rel="stylesheet" href="/static/css/banner.css">
+    <link rel="canonical" href="https://cijene.org/" />
     <meta property="og:title" content="cijene.org" />
     <meta property="og:description" content="Web stranica za prikaz i usporedbu cijena" />
     <meta property="og:url" content="https://cijene.org/" />
     <meta property="og:type" content="website" />
 
     {% block extra_head %}{% endblock %}
-    <title>cijene.org</title>
+    <title>cijene.org - pregled cijena u trgovinama</title>
 </head>
 <body>
 <div>
