noindex on product pages

--- a/templates/product_page.html
+++ b/templates/product_page.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="/static/css/product-page.css">
     <script src="/static/js/product-page.js" defer></script>
     <script src="/static/js/product-page-tr-expand.js" defer></script>
+    <meta name="robots" content="noindex">
 {% endblock %}
 
 {% block content %}
